[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/MainUI/SmallFontDarkTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/MainUI/TinyFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Icons/alarm-clock-2_white.png" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/calendar_white.png" type="Texture" id=4]
[ext_resource path="res://Scenes/GameUI/TextInteractionUI/TextInteractionPanel.gd" type="Script" id=5]
[ext_resource path="res://Scenes/GameUI/InteractableUI/TextInteractableButton.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="TextInteractionPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventWriteDelayTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="VBoxContainer"]
visible = false
margin_right = 640.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateLabel" type="Label" parent="VBoxContainer/Panel"]
margin_left = 26.8763
margin_top = 7.12373
margin_right = 119.876
margin_bottom = 16.1237
custom_fonts/font = ExtResource( 2 )
text = "June 22, 1986"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="VBoxContainer/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -90.5089
margin_top = 4.37457
margin_right = -25.5089
margin_bottom = 20.3746
custom_fonts/font = ExtResource( 2 )
text = "09:00 AM"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockSprite" type="TextureRect" parent="VBoxContainer/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -22.0
margin_top = 2.0
margin_right = -6.0
margin_bottom = 18.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalendarSprite" type="TextureRect" parent="VBoxContainer/Panel"]
margin_left = 5.0
margin_top = 2.0
margin_right = 21.0
margin_bottom = 18.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 640.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
margin_right = 640.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4
alignment = 2

[node name="LogLabel" type="Label" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 263.0
margin_right = 640.0
margin_bottom = 320.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "[06/20 09:00 AM] You wake from your sleep. The alarm is blaring loudly.
[06/20 09:00 AM] The alarm is really annoying. You should turn it off.
[06/20 09:00 AM] Who- what- when- is anything right now?
[06/20 09:00 AM] I'm Angela. This is my room.
[06/20 09:00 AM] I smell like farts. I should investigate."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractionsContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 263.0
margin_right = 636.0
margin_bottom = 312.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractableButton" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/InteractionsContainer" instance=ExtResource( 6 )]
margin_right = 636.0
margin_bottom = 15.0

[node name="InteractableButton2" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/InteractionsContainer" instance=ExtResource( 6 )]
margin_top = 17.0
margin_right = 636.0
margin_bottom = 32.0

[node name="InteractableButton3" parent="VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/InteractionsContainer" instance=ExtResource( 6 )]
margin_top = 34.0
margin_right = 636.0
margin_bottom = 49.0
